--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,116 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
+<title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
+    <header class="page-header">
+      <container>
+        <a class="page-header__logo">
+          <img class="page-header__logo-img" src="http://placehold.it/33x37" width="33" height="37" alt="Cat Energy">
+          <img class="page-header__logo-title" src="http://placehold.it/100x18" width="100" height="18" alt="Cat Energy">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">Открыть меню</button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item site-list__item--active">
+                <a>Главная</a>
+              </li>
+              <li class="site-list__item">
+                <a href="catalog.html">Каталог продукции</a>
+              </li>
+              <li class="site-list__item">
+                <a href="form.html">Подбор программы</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </container>
+    </header>
+    <main class="page-main">
+      <h1 class="visually-hidden">Cat Energy</h1>
+      <section class="promo">
+        <div class="container">
+          <h2 class="promo__title">Функциональное питание для котов</h2>
+          <p class="promo__content">Занялся собой? Займись котом</p>
+          <a class="promo__btn button" href="form.html">Подобрать программу</a>
+        </div>
+      </section>
+      <section class="programs">
+        <div class="container">
+          <h2 class="visually-hidden">Программы похудения для котов</h2>
+          <div class="programs__item programs__item-slim">
+            <h3 class="programs__title">Похудение</h3>
+            <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="programs__link" href="catalog.html">Каталог Slim</a>
+          </div>
+          <div class="programs__item programs__item-pro">
+            <h3 class="programs__title">Набор массы</h3>
+            <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="programs__link" href="catalog.html">Каталог Pro</a>
+        </div>
+        </div>
+      </section>
+      <section class="features">
+        <h2 class="visually-hidden">Преимущества функционального питания Cat Energy</h2>
+        <p class="features-title">Как это работает</p>
+         <ul class="features-list">
+           <li class="features-item features-item__icon-leaf">
+              Функциональное питание содержит только полезные питательные вещества.
+           </li>
+           <li class="features-item features-item__icon-powder">
+             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+           </li>
+           <li class="features-item__icon-cutlery">
+             Замените один-два приема обычной еды на наше функциональное питание.
+           </li>
+           <li class="features-item features-item__icon-clock">
+             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+           </li>
+         </ul>
+      </section>
+      <section class="example">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__content">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+      </section>
+      <section class="contacts">
+        <h2 class="visually-hidden">Месторасположение магазина Cat Energy на карте</h2>
+        <div class="container">
+          <p class="contacts-item">приглашаем к сотрудничеству дилеров</p>
+          <p class="contacts-adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <img class="contacts-map" src="http://placehold.it/320x362" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
+      </section>
+    </main>
+    <footer class="page-footer">
+      <a class="page-footer__logo">
+        <img class="page-footer__logo-title" src="http://placehold.it/100x18" width="100" height="18" alt="Cat Energy">
+      </a>
+      <div class="page-footer__social social">
+        <h2 class="visually-hidden">Мы в социальных сетях</h2>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social-link social-link__vk" href="#">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link social-link__instagram" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link social-link__fb" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <h2 class="visually-hidden">Логотип разработчика сайта</h2>
+        <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
+          HTML Academy
+          <img class="copyright__logo" src="http://placehold.it/33x37" alt="Логотип HTMLAcademy" width="27" height="34">
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
