--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,10 +14,10 @@
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
+          <li class="site-list__item">
             <a href="index.html">Главная</a>
           </li>
-          <li class="site-list__item">
+          <li class="site-list__item site-list__item--active">
             <a>Каталог продукции</a>
           </li>
           <li class="site-list__item">
@@ -207,11 +207,11 @@
     </section>
     <section class="contacts">
       <h2 class="visually-hidden">Месторасположение магазина Cat Energy на карте</h2>
-      <div class="container">
-        <p class="contacts-item">приглашаем к сотрудничеству дилеров</p>
-        <p class="contacts-adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <div class="contacts__container">
+        <p class="contacts__item">приглашаем к сотрудничеству дилеров</p>
+        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
-      <img class="contacts-map" src="http://placehold.it/320x362" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
+      <img class="contacts__map" src="http://placehold.it/320x362" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
     </section>
   </main>
   <footer class="page-footer">
@@ -220,19 +220,19 @@
     </a>
     <div class="page-footer__social social">
       <h2 class="visually-hidden">Мы в социальных сетях</h2>
-      <ul class="social-list">
-        <li class="social-item">
-          <a class="social-link social-link__vk" href="#">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vk" href="#">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
-        <li class="social-item">
-          <a class="social-link social-link__instagram" href="#">
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="#">
             <span class="visually-hidden">Инстаграм</span>
           </a>
         </li>
-        <li class="social-item">
-          <a class="social-link social-link__fb" href="#">
+        <li class="social__item">
+          <a class="social__link social__link--fb" href="#">
             <span class="visually-hidden">Фейсбук</span>
           </a>
         </li>
