--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <header class="page-header">
-    <a class="page-header__logo" href="index.html">
+    <a class="page-header__logo">
       <img class="page-header__logo-img" src="http://placehold.it/33x37" width="33" height="37" alt="Cat Energy">
       <img class="page-header__logo-title" src="http://placehold.it/100x18" width="100" height="18" alt="Cat Energy">
     </a>
@@ -83,7 +83,7 @@
     </section>
   </main>
   <footer class="page-footer">
-    <a class="page-footer__logo" href="index.html">
+    <a class="page-footer__logo">
       <img class="page-footer__logo-title" src="http://placehold.it/100x18" width="100" height="18" alt="Cat Energy">
     </a>
     <div class="page-footer__social social">
