--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,247 +3,255 @@
   <head>
     <meta charset="utf-8">
     <title>Cat Energy</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
   <header class="page-header">
-    <a class="page-header__logo" href="index.html">
-      <img class="page-header__logo-img" src="http://placehold.it/33x37" width="33" height="37" alt="Cat Energy">
-      <img class="page-header__logo-title" src="http://placehold.it/100x18" width="100" height="18" alt="Cat Energy">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item site-list__item--active">
-            <a>Каталог продукции</a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div class="container">
+        <nav class="main-nav">
+          <div class="main-nav__wrapper">
+            <a class="main-nav__logo">
+              <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
+            </a>
+            <button class="main-nav__button" type="button">Открыть меню</button>
+          </div>
+          <ul class="main-nav__list main-menu">
+            <li class="main-menu__item">
+              <a class="main-menu__link" href="index.html">Главная</a>
+            </li>
+            <li class="main-menu__item main-menu__item--active">
+              <a class="main-menu__link">Каталог продукции</a>
+            </li>
+            <li class="main-menu__item">
+              <a class="main-menu__link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+    </div>
   </header>
   <main>
     <h1 class="visually-hidden">Cat Energy</h1>
-    <section class="catalog">
-      <h2 class="catalog__title">Каталог продукции</h2>
-      <ul class="catalog__list">
-        <li class="catalog__item product">
-          <div class="product__wrapper">
-            <img clss="product__img" src="http://placehold.it/100x18" width="66" height="70" alt="Cat Energy PRO 500 г">
-            <div class="product__description">
-              <h3 class="product__title">Cat Energy PRO 500 г</h3>
-              <table class="product__info">
-                <tr>
-                  <td class="">Объем</td>
-                  <td class="">500 г</td>
-                </tr>
-                <tr>
-                  <td class="">Вкус</td>
-                  <td class="">Курица</td>
-                </tr>
-                <tr>
-                  <td class="">Цена</td>
-                  <td class="">700 Р.</td>
-                </tr>
-              </table>
+    <div class="container">
+      <section class="catalog">
+        <h2 class="catalog__title">Каталог продукции</h2>
+        <ul class="catalog__list">
+          <li class="catalog__item">
+            <div class="product">
+              <img clss="product__img" src="/source/img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+              <div class="product__description">
+                <h3 class="product__title">Cat Energy PRO 500 г</h3>
+                <table class="product__info">
+                  <tr>
+                    <td class="">Объем</td>
+                    <td class="">500 г</td>
+                  </tr>
+                  <tr>
+                    <td class="">Вкус</td>
+                    <td class="">Курица</td>
+                  </tr>
+                  <tr>
+                    <td class="">Цена</td>
+                    <td class="">700 Р.</td>
+                  </tr>
+                </table>
+              </div>
             </div>
-          </div>
-          <a class="product__btn button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <div class="product__wrapper">
-            <img clss="product__img" src="http://placehold.it/100x18" width="66" height="70" alt="Cat Energy PRO 1000 ">
-            <div class="product__description">
-              <h3 class="product__title">Cat Energy PRO 1000</h3>
-              <table class="product__info">
-                <tr>
-                  <td class="">Объем</td>
-                  <td class="">1000 г</td>
-                </tr>
-                <tr>
-                  <td class="">Вкус</td>
-                  <td class="">Курица</td>
-                </tr>
-                <tr>
-                  <td class="">Цена</td>
-                  <td class="">1000 Р.</td>
-                </tr>
-              </table>
+            <a class="product__btn button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item">
+            <div class="product">
+              <img clss="product__img" src="/source/img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+              <div class="product__description">
+                <h3 class="product__title">Cat Energy PRO 1000</h3>
+                <table class="product__info">
+                  <tr>
+                    <td class="">Объем</td>
+                    <td class="">1000 г</td>
+                  </tr>
+                  <tr>
+                    <td class="">Вкус</td>
+                    <td class="">Курица</td>
+                  </tr>
+                  <tr>
+                    <td class="">Цена</td>
+                    <td class="">1000 Р.</td>
+                  </tr>
+                </table>
+              </div>
             </div>
-          </div>
-          <a class="product__btn button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <div class="product__wrapper">
-            <img clss="product__img" src="http://placehold.it/100x18" width="66" height="70" alt="Cat Energy PRO 500 г">
-            <div class="product__description">
-              <h3 class="product__title">Cat Energy PRO 500 г</h3>
-              <table class="product__info">
-                <tr>
-                  <td class="">Объем</td>
-                  <td class="">500 г</td>
-                </tr>
-                <tr>
-                  <td class="">Вкус</td>
-                  <td class="">Рыба</td>
-                </tr>
-                <tr>
-                  <td class="">Цена</td>
-                  <td class="">700 Р.</td>
-                </tr>
-              </table>
+            <a class="product__btn button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item">
+            <div class="product">
+              <img clss="product__img" src="/source/img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+              <div class="product__description">
+                <h3 class="product__title">Cat Energy PRO 500 г</h3>
+                <table class="product__info">
+                  <tr>
+                    <td class="">Объем</td>
+                    <td class="">500 г</td>
+                  </tr>
+                  <tr>
+                    <td class="">Вкус</td>
+                    <td class="">Рыба</td>
+                  </tr>
+                  <tr>
+                    <td class="">Цена</td>
+                    <td class="">700 Р.</td>
+                  </tr>
+                </table>
+              </div>
             </div>
-          </div>
-          <a class="product__btn button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <div class="product__wrapper">
-            <img clss="product__img" src="http://placehold.it/100x18" width="66" height="70" alt="Cat Energy PRO 1000 г">
-            <div class="product__description">
-              <h3 class="product__title">Cat Energy PRO 1000 г</h3>
-              <table class="product__info">
-                <tr>
-                  <td class="">Объем</td>
-                  <td class="">1000 г</td>
-                </tr>
-                <tr>
-                  <td class="">Вкус</td>
-                  <td class="">Рыба</td>
-                </tr>
-                <tr>
-                  <td class="">Цена</td>
-                  <td class="">1000 Р.</td>
-                </tr>
-              </table>
+            <a class="product__btn button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item">
+            <div class="product">
+              <img clss="product__img" src="/source/img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+              <div class="product__description">
+                <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+                <table class="product__info">
+                  <tr>
+                    <td class="">Объем</td>
+                    <td class="">1000 г</td>
+                  </tr>
+                  <tr>
+                    <td class="">Вкус</td>
+                    <td class="">Рыба</td>
+                  </tr>
+                  <tr>
+                    <td class="">Цена</td>
+                    <td class="">1000 Р.</td>
+                  </tr>
+                </table>
+              </div>
             </div>
-          </div>
-          <a class="product__btn button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <div class="product__wrapper">
-            <img clss="product__img" src="http://placehold.it/100x18" width="66" height="70" alt="Cat Energy Slim 500 г">
-            <div class="product__description">
-              <h3 class="product__title">Cat Energy Slim 500 г</h3>
-              <table class="product__info">
-                <tr>
-                  <td class="">Объем</td>
-                  <td class="">500 г</td>
-                </tr>
-                <tr>
-                  <td class="">Вкус</td>
-                  <td class="">Гречка</td>
-                </tr>
-                <tr>
-                  <td class="">Цена</td>
-                  <td class="">400 Р.</td>
-                </tr>
-              </table>
+            <a class="product__btn button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item">
+            <div class="product">
+              <img clss="product__img" src="/source/img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
+              <div class="product__description">
+                <h3 class="product__title">Cat Energy Slim 500 г</h3>
+                <table class="product__info">
+                  <tr>
+                    <td class="">Объем</td>
+                    <td class="">500 г</td>
+                  </tr>
+                  <tr>
+                    <td class="">Вкус</td>
+                    <td class="">Гречка</td>
+                  </tr>
+                  <tr>
+                    <td class="">Цена</td>
+                    <td class="">400 Р.</td>
+                  </tr>
+                </table>
+              </div>
             </div>
-          </div>
-          <a class="product__btn button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <div class="product__wrapper">
-            <img clss="product__img" src="http://placehold.it/100x18" width="66" height="70" alt="Cat Energy Slim 1000 г">
-            <div class="product__description">
-              <h3 class="product__title">Cat Energy Slim 1000 г</h3>
-              <table class="product__info">
-                <tr>
-                  <td class="">Объем</td>
-                  <td class="">500 г</td>
-                </tr>
-                <tr>
-                  <td class="">Вкус</td>
-                  <td class="">Гречка</td>
-                </tr>
-                <tr>
-                  <td class="">Цена</td>
-                  <td class="">700 Р.</td>
-                </tr>
-              </table>
+            <a class="product__btn button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item">
+            <div class="product">
+              <img clss="product__img" src="/source/img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
+              <div class="product__description">
+                <h3 class="product__title">Cat Energy Slim 1000 г</h3>
+                <table class="product__info">
+                  <tr>
+                    <td class="">Объем</td>
+                    <td class="">500 г</td>
+                  </tr>
+                  <tr>
+                    <td class="">Вкус</td>
+                    <td class="">Гречка</td>
+                  </tr>
+                  <tr>
+                    <td class="">Цена</td>
+                    <td class="">700 Р.</td>
+                  </tr>
+                </table>
+              </div>
             </div>
-          </div>
-          <a class="product__btn button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item product">
-          <div class="product__wrapper">
-            <img clss="product__img" src="http://placehold.it/100x18" width="66" height="70" alt="Cat Energy Slim 500 г">
-            <div class="product__description">
-              <h3 class="product__title">Cat Energy Slim 500 г</h3>
-              <table class="product__info">
-                <tr>
-                  <td class="">Объем</td>
-                  <td class="">500 г</td>
-                </tr>
-                <tr>
-                  <td class="">Вкус</td>
-                  <td class="">Рис</td>
-                </tr>
-                <tr>
-                  <td class="">Цена</td>
-                  <td class="">500 Р.</td>
-                </tr>
-              </table>
+            <a class="product__btn button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item">
+            <div class="product">
+              <img clss="product__img" src="/source/img/rice-small-mobile@1x.jpg" width=140 height="144" alt="Cat Energy Slim 500 г">
+              <div class="product__description">
+                <h3 class="product__title">Cat Energy Slim 500 г</h3>
+                <table class="product__info">
+                  <tr>
+                    <td class="">Объем</td>
+                    <td class="">500 г</td>
+                  </tr>
+                  <tr>
+                    <td class="">Вкус</td>
+                    <td class="">Рис</td>
+                  </tr>
+                  <tr>
+                    <td class="">Цена</td>
+                    <td class="">500 Р.</td>
+                  </tr>
+                </table>
+              </div>
             </div>
-          </div>
-          <a class="product__btn button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item catalog__item-more">
-          <div class="more__info">
-            <a class="more__link-icon" href="#"></a>
-            <a class="more__link-title" href="#">
-              <h3 class="more__title">Показать еще 100500 товаров</h3>
-            </a>
-            <p class="more__text">На самом деле вкусов гораздо больше!</p>
-          </div>
-          <a class="more__btn button" href="#">Показать все</a>
-        </li>
-      </ul>
-    </section>
+            <a class="product__btn button" href="#">Заказать</a>
+          </li>
+          <li class="catalog__item catalog__item-more">
+            <div class="more__info">
+              <a class="more__link-icon" href="#"></a>
+              <a class="more__link-title" href="#">
+                <h3 class="more__title">Показать еще 100500 товаров</h3>
+              </a>
+              <p class="more__text">На самом деле вкусов гораздо больше!</p>
+            </div>
+            <a class="more__btn button" href="#">Показать все</a>
+          </li>
+        </ul>
+      </section>
+    </div>
     <section class="contacts">
-      <h2 class="visually-hidden">Месторасположение магазина Cat Energy на карте</h2>
-      <div class="contacts__container">
-        <p class="contacts__item">приглашаем к сотрудничеству дилеров</p>
-        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      </div>
-      <img class="contacts__map" src="http://placehold.it/320x362" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
-    </section>
+        <h2 class="visually-hidden">Месторасположение магазина Cat Energy на карте</h2>
+        <div class="container">
+          <div class="contacts__wrapper">
+            <p class="contacts__item">приглашаем к сотрудничеству дилеров</p>
+            <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          </div>
+        </div>
+        <img class="contacts__map" src="/source/img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
+      </section>
   </main>
   <footer class="page-footer">
-    <a class="page-footer__logo" href="index.html">
-      <img class="page-footer__logo-title" src="http://placehold.it/100x18" width="100" height="18" alt="Cat Energy">
-    </a>
-    <div class="page-footer__social social">
-      <h2 class="visually-hidden">Мы в социальных сетях</h2>
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--vk" href="#">
-            <span class="visually-hidden">Вконтакте</span>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--instagram" href="#">
-            <span class="visually-hidden">Инстаграм</span>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--fb" href="#">
-            <span class="visually-hidden">Фейсбук</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="page-footer__copyright copyright">
-      <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-      <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
-        HTML Academy
-        <img class="copyright__logo" src="http://placehold.it/33x37" alt="Логотип HTMLAcademy" width="27" height="34">
+    <div class="footer-wrapper container">
+      <a class="page-footer__logo">
+        <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
       </a>
+      <div class="page-footer__social social">
+        <h2 class="visually-hidden">Мы в социальных сетях</h2>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vk" href="#">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--fb" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <h2 class="visually-hidden">Логотип разработчика сайта</h2>
+        <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
+          HTML Academy
+          <img class="copyright__logo" src="http://placehold.it/33x37" alt="Логотип HTMLAcademy" width="27" height="34">
+        </a>
+      </div>
     </div>
   </footer>
   </body>
