--- a/source/form.html
+++ b/source/form.html
@@ -3,63 +3,67 @@
   <head>
     <meta charset="utf-8">
     <title>Cat Energy</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
   <header class="page-header">
-    <a class="page-header__logo" href="index.html">
-      <img class="page-header__logo-img" src="http://placehold.it/33x37" width="33" height="37" alt="Cat Energy">
-      <img class="page-header__logo-title" src="http://placehold.it/100x18" width="100" height="18" alt="Cat Energy">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="index.html">Главная</a>
+    <div class="container">
+      <nav class="main-nav">
+        <div class="main-nav__wrapper">
+          <a class="main-nav__logo">
+            <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
+          </a>
+          <button class="main-nav__button" type="button">Открыть меню</button>
+        </div>
+        <ul class="main-nav__list main-menu">
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="index.html">Главная</a>
           </li>
-          <li class="site-list__item">
-            <a href="catalog.html">Каталог продукции</a>
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="site-list__item site-list__item--active">
-            <a>Подбор программы</a>
+          <li class="main-menu__item main-menu__item--active">
+            <a class="main-menu__link">Подбор программы</a>
           </li>
         </ul>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </header>
   <main>
     <h1 class="visually-hidden">Cat Energy</h1>
   </main>
   <footer class="page-footer">
-    <a class="page-footer__logo" href="index.html">
-      <img class="page-footer__logo-title" src="http://placehold.it/100x18" width="100" height="18" alt="Cat Energy">
-    </a>
-    <div class="page-footer__social social">
-      <h2 class="visually-hidden">Мы в социальных сетях</h2>
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--vk" href="#">
-            <span class="visually-hidden">Вконтакте</span>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--instagram" href="#">
-            <span class="visually-hidden">Инстаграм</span>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--fb" href="#">
-            <span class="visually-hidden">Фейсбук</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="page-footer__copyright copyright">
-      <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-      <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
-        HTML Academy
-        <img class="copyright__logo" src="http://placehold.it/33x37" alt="Логотип HTMLAcademy" width="27" height="34">
+    <div class="footer-wrap">
+      <a class="page-footer__logo" href="index.html">
+        <img class="page-footer__logo-title" src="http://placehold.it/100x18" width="100" height="18" alt="Cat Energy">
       </a>
+      <div class="page-footer__social social">
+        <h2 class="visually-hidden">Мы в социальных сетях</h2>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vk" href="#">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--fb" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <h2 class="visually-hidden">Логотип разработчика сайта</h2>
+        <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
+          HTML Academy
+          <img class="copyright__logo" src="http://placehold.it/33x37" alt="Логотип HTMLAcademy" width="27" height="34">
+        </a>
+      </div>
     </div>
   </footer>
   </body>
