Исправляет путь картинок в html

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,7 +37,7 @@
         <ul class="catalog__list">
           <li class="catalog__item">
             <div class="product">
-              <img clss="product__img" src="/source/img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+              <img clss="product__img" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
               <div class="product__description">
                 <h3 class="product__title">Cat Energy PRO 500 г</h3>
                 <table class="product__info">
@@ -60,7 +60,7 @@
           </li>
           <li class="catalog__item">
             <div class="product">
-              <img clss="product__img" src="/source/img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+              <img clss="product__img" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
               <div class="product__description">
                 <h3 class="product__title">Cat Energy PRO 1000</h3>
                 <table class="product__info">
@@ -83,7 +83,7 @@
           </li>
           <li class="catalog__item">
             <div class="product">
-              <img clss="product__img" src="/source/img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+              <img clss="product__img" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
               <div class="product__description">
                 <h3 class="product__title">Cat Energy PRO 500 г</h3>
                 <table class="product__info">
@@ -106,7 +106,7 @@
           </li>
           <li class="catalog__item">
             <div class="product">
-              <img clss="product__img" src="/source/img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+              <img clss="product__img" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
               <div class="product__description">
                 <h3 class="product__title">Cat Energy PRO 1000 г</h3>
                 <table class="product__info">
@@ -129,7 +129,7 @@
           </li>
           <li class="catalog__item">
             <div class="product">
-              <img clss="product__img" src="/source/img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
+              <img clss="product__img" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
               <div class="product__description">
                 <h3 class="product__title">Cat Energy Slim 500 г</h3>
                 <table class="product__info">
@@ -152,7 +152,7 @@
           </li>
           <li class="catalog__item">
             <div class="product">
-              <img clss="product__img" src="/source/img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
+              <img clss="product__img" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
               <div class="product__description">
                 <h3 class="product__title">Cat Energy Slim 1000 г</h3>
                 <table class="product__info">
@@ -175,7 +175,7 @@
           </li>
           <li class="catalog__item">
             <div class="product">
-              <img clss="product__img" src="/source/img/rice-small-mobile@1x.jpg" width=140 height="144" alt="Cat Energy Slim 500 г">
+              <img clss="product__img" src="img/rice-small-mobile@1x.jpg" width=140 height="144" alt="Cat Energy Slim 500 г">
               <div class="product__description">
                 <h3 class="product__title">Cat Energy Slim 500 г</h3>
                 <table class="product__info">
@@ -217,7 +217,7 @@
             <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           </div>
         </div>
-        <img class="contacts__map" src="/source/img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
+        <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
       </section>
   </main>
   <footer class="page-footer">
@@ -249,7 +249,7 @@
         <h2 class="visually-hidden">Логотип разработчика сайта</h2>
         <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
           HTML Academy
-          <img class="copyright__logo" src="http://placehold.it/33x37" alt="Логотип HTMLAcademy" width="27" height="34">
+          <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="34">
         </a>
       </div>
     </div>
