--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
           <div class="promo__wrapper">
             <h2 class="promo__title">Функциональное питание для котов</h2>
             <p class="promo__content">Занялся собой? Займись котом</p>
-            <img class="promo__img" src="/source/img/index-can-mobile@1x.png" alt="Продукт Cat Energy" width="280" height="271">
+            <img class="promo__img" src="img/index-can-mobile@1x.png" alt="Продукт Cat Energy" width="280" height="271">
             <a class="promo__btn button" href="form.html">Подобрать программу</a>
           </div>
         </div>
@@ -92,7 +92,7 @@
             <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           </div>
         </div>
-        <img class="contacts__map" src="/source/img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
+        <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="320" height="362">
       </section>
   </main>
   <footer class="page-footer">
@@ -124,7 +124,7 @@
         <h2 class="visually-hidden">Логотип разработчика сайта</h2>
         <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
           HTML Academy
-          <img class="copyright__logo" src="http://placehold.it/33x37" alt="Логотип HTMLAcademy" width="27" height="34">
+          <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="34">
         </a>
       </div>
     </div>
