--- a/source/index.html
+++ b/source/index.html
@@ -57,20 +57,20 @@
               </li>
             </ul>
         </section>
-        <section class="features">
+        <section class="advantages">
           <h2 class="visually-hidden">Преимущества функционального питания Cat Energy</h2>
-            <p class="features__title">Как это работает</p>
-            <ul class="features__list">
-              <li class="features-list__item features-list__item--leaf">
+            <p class="advantages__title">Как это работает</p>
+            <ul class="advantages__list">
+              <li class="advantages-list__item advantages-list__item--leaf">
                 Функциональное питание содержит только полезные питательные вещества.
               </li>
-              <li class="features-list__item features-list__item--powder">
+              <li class="advantages-list__item advantages-list__item--powder">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
               </li>
-              <li class="features-list__item features-list__item--cutlery">
+              <li class="advantages-list__item advantages-list__item--dining">
                 Замените один-два приема обычной еды на наше функциональное питание.
               </li>
-              <li class="features-list__item features-list__item--clock">
+              <li class="advantages-list__item advantages-list__item--clock">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
               </li>
             </ul>
