--- a/source/index.html
+++ b/source/index.html
@@ -5,30 +5,29 @@
   <meta charset="utf-8">
   <title>Cat Energy</title>
   <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
 
   <header class="page-header">
-    <nav class="main-nav">
-      <div class="main-nav__wrapper">
-        <a class="main-nav__logo">
-          <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
-        </a>
-        <button class="main-nav__btn" type="button">Открыть меню</button>
-      </div>
-      <ul class="main-nav__list main-menu">
-        <li class="main-menu__item main-menu__item--active">
-          <a class="main-menu__link">Главная</a>
-        </li>
-        <li class="main-menu__item">
-          <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
-        </li>
-        <li class="main-menu__item">
-          <a class="main-menu__link" href="form.html">Подбор программы</a>
-        </li>
+    <div class="page-header__wrapper">
+      <a class="page-header__logo">
+        <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
+      </a>
+      <button class="page-header__btn" type="button">Открыть меню</button>
+      <ul class="page-header__main-menu main-menu">
+          <li class="main-menu__item main-menu__item--active">
+            <a class="main-menu__link">Главная</a>
+          </li>
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="form.html">Подбор программы</a>
+          </li>
       </ul>
-    </nav>
+    </div>
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Cat Energy</h1>
