--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
 <body>
 
   <div style="display:none">
-    <include src="build/img/sprite.svg"></include>
+    <include src="img/sprite.svg"></include>
   </div>
 
   <header class="page-header">
