--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <div style="display:none">
-    <include src="img/sprite.svg"></include>
+    <include src="build/img/sprite.svg"></include>
   </div>
 
   <header class="page-header page-header--index">
@@ -203,7 +203,7 @@
         <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
         <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
           <svg class="copyright__logo-svg" width="40" height="46">
-            <use xlink:href="#htmlacademy"></use>
+            <use xlink:href="#icon-htmlacademy"></use>
           </svg>
         </a>
       </div>
