--- a/source/catalog.html
+++ b/source/catalog.html
@@ -370,7 +370,7 @@
         <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
         <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
           <svg class="copyright__logo-svg" width="40" height="46">
-            <use xlink:href="#htmlacademy"></use>
+            <use xlink:href="#icon-htmlacademy"></use>
           </svg>
         </a>
       </div>
